--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
     "files.associations": {
-        "string": "cpp",
-        "memory": "cpp",
+        "algorithm": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
         "cctype": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
         "compare": "cpp",
@@ -17,7 +18,12 @@
         "ctime": "cpp",
         "cwchar": "cpp",
         "exception": "cpp",
+        "filesystem": "cpp",
+        "format": "cpp",
+        "forward_list": "cpp",
+        "fstream": "cpp",
         "initializer_list": "cpp",
+        "iomanip": "cpp",
         "ios": "cpp",
         "iosfwd": "cpp",
         "iostream": "cpp",
@@ -25,48 +31,41 @@
         "iterator": "cpp",
         "limits": "cpp",
         "list": "cpp",
+        "locale": "cpp",
+        "map": "cpp",
+        "memory": "cpp",
+        "mutex": "cpp",
         "new": "cpp",
+        "optional": "cpp",
         "ostream": "cpp",
+        "ratio": "cpp",
+        "regex": "cpp",
+        "sstream": "cpp",
         "stdexcept": "cpp",
+        "stop_token": "cpp",
         "streambuf": "cpp",
+        "string": "cpp",
         "system_error": "cpp",
+        "thread": "cpp",
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
         "utility": "cpp",
+        "vector": "cpp",
         "xfacet": "cpp",
         "xiosbase": "cpp",
         "xlocale": "cpp",
+        "xlocbuf": "cpp",
         "xlocinfo": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
         "xlocnum": "cpp",
+        "xloctime": "cpp",
         "xmemory": "cpp",
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp",
-        "filesystem": "cpp",
-        "algorithm": "cpp",
-        "charconv": "cpp",
-        "chrono": "cpp",
-        "format": "cpp",
-        "forward_list": "cpp",
-        "iomanip": "cpp",
-        "locale": "cpp",
-        "map": "cpp",
-        "mutex": "cpp",
-        "optional": "cpp",
-        "ratio": "cpp",
-        "sstream": "cpp",
-        "stop_token": "cpp",
-        "thread": "cpp",
-        "vector": "cpp",
-        "xlocbuf": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xloctime": "cpp",
         "xtree": "cpp",
-        "regex": "cpp",
-        "fstream": "cpp"
-    },
-    "cmake.configureOnOpen": true
+        "xutility": "cpp"
+    }
 }
